infra/k8s/media-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
        - name: media
          image: mohitrakh/pod-media:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: media-storage
              mountPath: /app/uploads
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
