infra/k8s/podcast-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podcast-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podcast
  template:
    metadata:
      labels:
        app: podcast
    spec:
      containers:
        - name: podcast
          image: mohitrakh/podcast:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/public/podcast/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          
          livenessProbe:
            httpGet:
              path: /api/public/podcast/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
