infra/k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 5000
      targetPort: 5000
