infra/k8s/media-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-srv
spec:
  selector:
    app: media
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
