infra/k8s/podcast-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: podcast-srv
spec:
  selector:
    app: podcast
  ports:
    - port: 5000
      targetPort: 5000
