infra/k8s/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-private
  annotations:
    konghq.com/plugins: jwt-auth
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/private/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000

          - path: /api/private/podcast
            pathType: Prefix
            backend:
              service:
                name: podcast-srv
                port:
                  number: 5000
